--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -71,13 +71,7 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label fw-bold">数据库名</label>
-                            <p class="form-control-plaintext">{{ instance.database_name or '未指定' }}</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="mb-3">
                             <label class="form-label fw-bold">数据库版本</label>
                             <p class="form-control-plaintext">
@@ -211,23 +205,8 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <h4 class="text-success mb-1">{{ instance.accounts.count() }}</h4>
+                        <h4 class="text-success mb-1">{{ instance.sync_count or 0 }}</h4>
                         <small class="text-muted">同步次数</small>
-                    </div>
-                </div>
-                
-                <hr class="my-3">
-                
-                <div class="row text-center">
-                    <div class="col-6">
-                        <div class="border-end">
-                            <h4 class="text-info mb-1">{{ instance.accounts.filter_by(is_active=True).count() }}</h4>
-                            <small class="text-muted">活跃账户</small>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <h4 class="text-warning mb-1">{{ instance.accounts.filter_by(is_active=False).count() }}</h4>
-                        <small class="text-muted">禁用账户</small>
                     </div>
                 </div>
             </div>
